manifests/apps/plex/test-gpu-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-gpu
  namespace: plex
spec:
  nodeSelector:
    hardware.nvidia.com/gpu: "true"
  runtimeClassName: nvidia
  containers:
  - name: test
    image: nvidia/cuda:12.0.0-base-ubuntu22.04
    command: ["nvidia-smi"]
    securityContext:
      privileged: true
